test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/incomplete_param.plx
type struc s;

#  it's illegal to define a function with a parameter of incomplete type,
#  even if the parameter isn't used
pub fn foo(x: struc s) i32 {
    return false
}

